# BoostTCPFileServer

./: CMakeLists.txt  README.md  client.cpp  config_server.txt  server.cpp  test_client.py  utils.cpp  utils.hpp
Common/: tcp_message.cpp  tcp_message.hpp  tcp_packet.hpp
TCPClient/: CMakeLists.txt  tcp_client.cpp  tcp_client.hpp
TCPServer/: CMakeLists.txt  tcp_server.cpp  tcp_server.hpp
TCPServer/TCPConnection/: CMakeLists.txt  tcp_connection.cpp  tcp_connection.hpp
